Add backend functions
Comment
Uncomment
