# service/api/comment-photo.go
@@ -4,6 +4,7 @@ import (
 	"database/sql"
 	"encoding/json"
 	"net/http"
+	"time"
 
 	"git.sapienzaapps.it/fantasticcoffee/fantastic-coffee-decaffeinated/service/api/reqcontext"
 	"github.com/julienschmidt/httprouter"
@@ -11,8 +12,8 @@ import (
 
 // Upload a photo.
 // The user must be already logged in.
-func (rt *_router) likePhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
-	w.Header().Set("content-type", "application/json")
+func (rt *_router) commentPhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+	w.Header().Set("content-type", "multipart/form-data")
 	token := r.URL.Query().Get("token")
 	err := rt.db.CheckToken(token)
 	if err == sql.ErrNoRows {
@@ -23,9 +24,14 @@ func (rt *_router) likePhoto(w http.ResponseWriter, r *http.Request, ps httprout
 		return
 	}
 
-	_ = r.ParseForm()
 	photoId := r.FormValue("photoId")
-	userId := r.FormValue("userId")
+	userId := r.FormValue("authorId")
+	text := r.FormValue("text")
+
+	if len(text) > 300 || len(text) < 1 {
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
 
 	authorId, err := rt.db.GetAuthorId(photoId)
 	if err != nil {
@@ -45,18 +51,18 @@ func (rt *_router) likePhoto(w http.ResponseWriter, r *http.Request, ps httprout
 		w.WriteHeader(http.StatusForbidden)
 		return
 	}
-
-	id, err := rt.db.PutLike(photoId, userId)
+	t := time.Now().Format("2006-01-02 15:04:05")
+	id, err := rt.db.Comment(photoId, userId, text, t)
 	if err != nil {
-		if err.Error() == "already liked" {
-			w.WriteHeader(http.StatusForbidden)
+		if err.Error() == "photo does not exist" {
+			w.WriteHeader(http.StatusNotFound)
 		} else {
 			w.WriteHeader(http.StatusInternalServerError)
 		}
 		return
 	}
 
-	liker, err := rt.db.GetUsername(userId)
+	commenter, err := rt.db.GetUsername(userId)
 	if err != nil && err == sql.ErrNoRows {
 		w.WriteHeader(http.StatusNotFound)
 		return
@@ -64,10 +70,12 @@ func (rt *_router) likePhoto(w http.ResponseWriter, r *http.Request, ps httprout
 		w.WriteHeader(http.StatusInternalServerError)
 		return
 	}
-	ctx.Logger.Info(liker, " liked ", photoId)
-	_ = json.NewEncoder(w).Encode(Like{
-		LikeId:  id,
-		PhotoId: photoId,
-		Author:  userId,
+	ctx.Logger.Info(commenter, " commentes ", photoId)
+	_ = json.NewEncoder(w).Encode(Comment{
+		CommentId: id,
+		PhotoId:   photoId,
+		Author:    userId,
+		Text:      text,
+		Date:      t,
 	})
 }
